compile.log
/main.cpp: In function ‘void readData(Reader&)’:
/main.cpp:106:40: error: ‘struct MessagePiece’ has no member named ‘size’
                     for(int i=0; i<msg.size()-1; i++)
                                        ^~~~
/main.cpp:108:45: error: ‘struct MessagePiece’ has no member named ‘size’
                         for (int j=0; j<msg.size()-i-1; j++)
                                             ^~~~
/main.cpp:110:35: error: no match for ‘operator[]’ (operand types are ‘MessagePiece’ and ‘int’)
                             if(msg[j].index>msg[j+1].index)
                                   ^
/main.cpp:110:48: error: no match for ‘operator[]’ (operand types are ‘MessagePiece’ and ‘int’)
                             if(msg[j].index>msg[j+1].index)
                                                ^
/main.cpp:112:42: error: no match for ‘operator[]’ (operand types are ‘MessagePiece’ and ‘int’)
                                 swap(&msg[j], &msg[j+1]);
                                          ^
/main.cpp:112:51: error: no match for ‘operator[]’ (operand types are ‘MessagePiece’ and ‘int’)
                                 swap(&msg[j], &msg[j+1]);
                                                   ^
/main.cpp: In function ‘int main()’:
/main.cpp:175:49: warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]
                 if(reader.dataArray[i].dataIndex<min)
/main.cpp:136:9: warning: unused variable ‘befutott’ [-Wunused-variable]
     int befutott=0;
         ^~~~~~~~